* string.c (rb_enc_cr_str_buf_cat): don't reset coderange as unknown.   the condition 'ptr_a8 && str_cr != ENC_CODERANGE_7BIT' means not   unknown, str is also ASCII-8BIT because str_encindex == ptr_encindex,   and nont (str_cr == ENC_CODERANGE_UNKNOWN) and   str_cr != ENC_CODERANGE_7BIT means str_cr is valid because ASCII-8BIT   can't be broken. [ruby-dev:45688] [Bug #6509]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35863 b2dd03c8-39d4-4d8f-98ff-823fe69b080e